<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyHealth</string>

    <!-- Preferencias -->
	    <string name="title_activity_preferences_register">Preferências</string>
   	    <string name="title_activity_preferences_edit">Preferências</string>
	    <string name="chLembretePeso">Definir lembrete de peso</string>
	    <string name="chLembreteBPM">Obter número ideal de batimentos cardíacos</string>
	    <string name="hintHoraLembrete">Hora do lembrete</string>

    <!-- Tela Cadastro/Edicao Usuario -->
	    <string name="title_activity_user_register">Cadastro</string>
	    <string name="title_activity_user_edit">Editar dados</string>
	    <string name="tvRegisterTip">Para seu cadastro, informe:</string>
	    <string name="tvEmail">E-mail:</string>
	    <string name="hintEmail">fulano@email.com</string>
	    <string name="tvPassword">Senha:</string>
	    <string name="hintPassword">*******</string>
	    <string name="tvConfPassword">Confirme a senha:</string>
	    <string name="hintConfPassword">*******</string>
	    <string name="tvName">Nome completo:</string>
	    <string name="hintName">Fulano da Silva</string>
	    <string name="tvBirthDate">Data de nascimento:</string>
	    <string name="hintBirthDate">01/01/1970</string>
	    <string name="tvHeight">Altura (centímetros)</string>
	    <string name="hintHeight">200</string>
	    <string name="tvWeight">Peso (quilos)</string>
	    <string name="hintWeight">100</string>
	    <string name="tvRegTargetHR">Freq. cardíaca ideal</string>
	    <string name="hintRegTargetHR">70</string>
	    <string name="btContinue">Continuar</string>
	    <string name="toastUsrOK">Usuário cadastrado com sucesso!</string>
	    <string name="toastUsrFail">Falha no cadastro do usuário...</string>
	    <string name="toastUsrUpdOK">Usuário atualizado com sucesso!</string>
	    <string name="toastUsrUpdFail">Falha na atualização do usuário...</string>
	    <string name="toastUsrExists">E-mail já cadastrado!</string>
	    <string name="toastNoMatchPass">As senhas não conferem</string>
	    <string name="toastPrefsOK">Preferências salvas com sucesso!</string>
	    <string name="toastPrefsFail">Falha na definição de preferências...</string>

    <!-- Tela Cadastro/Edicao Indicador -->
	    <string name="title_activity_indicator_register">Cadastrar indicador</string>
	    <string name="title_activity_indicator_edit">Editar indicador</string>
	    <string name="tvTipoIndicador">Escolha o tipo de indicador:</string>
	    <string name="tvMedida1">Defina o valor da medida:</string>
	    <string name="tvMedida2">Defina o valor da segunda medida:</string>
	    <string name="spTipo">Selecione o tipo</string>
	    <string-array name="lsTypes">
	        <item>Altura</item>
	        <item>Peso</item>
	        <item>Freq. Cardíaca</item>
	        <item>Pressão Arterial</item>
	        <item>Glicose</item>
	        <item>HDL</item>
	        <item>LDL</item>
	        <item>Gordura corporal</item>
	        <item>Cintura</item>
	        <item>Triglicerídeos</item>
	    </string-array>
	    <string name="tvUnidade">unid.</string>
	    <string-array name="lsUnidades">
	        <item>cm</item>
	        <item>kg</item>
	        <item>BPM</item>
	        <item>:</item>
	        <item>mg/dL</item>
	        <item>mg/dL</item>
	        <item>mg/dL</item>
	        <item>%</item>
	        <item>cm</item>
	        <item>mg/dL</item>
	    </string-array>    
	    <string name="btSalvar">Salvar</string>
	    <string name="btExcluir">Excluir indicador</string>
	    <string name="toastIndOk">Indicador cadastrado com sucesso!</string>
	    <string name="toastIndFalha">Falha no cadastro do indicador...</string>
	    <string name="toastIndAtOK">Indicador atualizado com sucesso!</string>
	    <string name="toastIndAtFalha">Falha na atualização do indicador...</string>
	    <string name="toastIndExcOK">Indicador excluído com sucesso!</string>
	    <string name="toastIndExcFalha">Falha na exclusão do indicador...</string>

    <!-- Login -->
	    <string name="title_activity_login">MyHealth</string>
	    <string name="tvLogin">Faça seu login ou cadastre-se!</string>
	    <string name="btLogin">Login</string>
	    <string name="tvCadastre">Não possui conta? Crie agora!</string>
	    <string name="btCadastre">Criar conta</string>

    <!-- Tela Principal -->
	    <string name="title_activity_main">MyHealth</string>
	    <string name="tvOla">Olá, </string>
	    <string name="tvIMC">Seu IMC atual é:</string>
	    <string name="IMC">XX.X</string>
	    <string-array name="faixasIMC">
	        <item>Abaixo do peso</item>
	        <item>Saudável</item>
	        <item>Excesso de peso</item>
	        <item>Obesidade</item>
	        <item>Obesidade severa</item>
	        <item>Obesidade mórbida</item>
	    </string-array>
	    <string name="tvStatusIMC">[status]</string>
	    <string name="tvAlvoBPM">Sua freq. cardíaca ideal é:</string>
	    <string name="alvoBPM">XXX</string>
	    <string name="btCadIndicador">Cadastrar indicador</string>
	    <string name="btAcompanhamento">Acompanhamento</string>
	    <string name="btDados">Meus dados</string>
	    <string name="btConfiguracoes">Configurações</string>
	    <string name="btLogout">Fazer logout</string>

    <!-- Tela Indicadores -->
  	    <string name="title_activity_indicator_typeslist">Indicadores</string>
	    <string-array name="tabs">
            <item>7 dias</item>
            <item>4 semanas</item>
            <item>12 meses</item>
        </string-array>
	   	<string name="btCadastrarInd">Cadastrar indicador</string>

    <!-- Diálogos -->
	    <string name="tvLogonFalha">Falha no login!</string>
	    <string name="tvLogonErrado">E-mail ou password incorretos</string>
	    <string name="tvLogonVazio">Por favor, digite seu e-mail e password</string>
	    <string name="tvFalhaConexao">Falha de rede!</string>
	    <string name="tvServidorNaoResponde">Falha ao obter dados do servidor.
	        \nPor favor, verifique sua conexão de rede.</string>
        
    <!-- Notificações -->
	    <string name="ttNotificacaoPeso">Hora de pesar-se!</string>
	    <string name="txNotificacaoPeso">Pese-se e registre o peso no MyHealth</string>
	    <string name="ttNotificacaoBPM">Hora de medir freq. cardíaca!</string>
	    <string name="txNotificacaoBPM">Meça sua frequência cardíaca e registre no MyHealth</string>

    <!-- Diversos -->
	    <string name="descSplash">Splash MyHealth</string>
	    <string name="hello_blank_fragment">Hello blank fragment</string>
	    <string name="hello_world">Hello world!</string>
	    <string name="title_activity_tela_grafico">Gráfico</string>

</resources>
