<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".UserRegister"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/tvRegisterTip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />
            
            <TextView
		        android:id="@+id/tvEmail"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvEmail"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintEmail"
                android:inputType="text|textEmailAddress"
                android:textSize="20sp" >
            </EditText>

            <TextView
		        android:id="@+id/tvSenha"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvPassword"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:textSize="20sp" />
            
            <TextView
		        android:id="@+id/tvConfSenha"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvConfPassword"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintConfPassword"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <TextView
		        android:id="@+id/tvNome"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvName"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintName"
                android:inputType="textCapWords|textPersonName"
                android:textSize="20sp" />

            <TextView
		        android:id="@+id/tvDataNasc"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvBirthDate"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintBirthDate"
                android:inputType="none"
                android:textSize="20sp" />
            
            <TextView
		        android:id="@+id/tvAltura"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvHeight"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintHeight"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
            
            <TextView
		        android:id="@+id/tvPeso"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvWeight"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintWeight"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/btContinue"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>